--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js" integrity="sha384-/KNQL8Nu5gCHLqwqfQjA689Hhoqgi2S84SNUxC3roTe4EhJ9AfLkp8QiQcU8AMzI" crossorigin="anonymous"></script>
     <script>
-        let socket = io.connect("http://localhost:4321");
+        let socket = io.connect("https://phenomenal-lolly-c92ac1.netlify.app/");
     </script>
     <script src="./toolbox.js"></script>
     <script src="./canvas.js"></script>
